# Agentic-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
graph/chains/: retrieve.py
src/: ingestion.py  main.py
src/graph/: graph.py  llm.py  state.py
src/graph/chains/: generate.py  grader.py  hallucination.py  relevance.py  router.py  search.py  search_db.py
src/graph/chains/tests/: test_chains.py
src/graph/nodes/: db_search_query.py  generate.py  retrieve.py  retrieved_docs_grader.py  search_queries.py  web_search.py  web_search_queries.py
